home page script added

--- a/index.html
+++ b/index.html
@@ -51,7 +51,25 @@
     </div>
   </nav>
 
+  <main class="mt-5">
+    <section id="cities">
+        <div class="container">
+            <input type="text" class="form-control w-25 mb-3" id="search" placeholder="search city by name">
+            <div class="row cities-row">
 
+           
+
+                <!-- loader -->
+                <div class="justify-content-center cities-loader d-none">
+                    <div class="spinner-border " role="status">
+                        <span class="visually-hidden">Loading...</span>
+                    </div>
+                </div>
+            </div>
+        </div>
+        </div>
+    </section>
+</main>
 
 
   <!-- sweet alert js cdn -->
