--- a/edit.html
+++ b/edit.html
@@ -4,7 +4,6 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-
   <!-- boostrap cdn -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
@@ -13,8 +12,8 @@
     integrity="sha512-Kc323vGBEqzTmouAECnVceyQqyqdsSiqLQISBL29aUW4U/M7pSPA/gEUZQqv1cwx4OnYxTxve5UMg5GT6L4JJg=="
     crossorigin="anonymous" referrerpolicy="no-referrer" />
   <!-- style css link -->
-  <link rel="stylesheet" href="./assets/css/style.css">
-  <title>API Home Page</title>
+  <link rel="stylesheet" href="./assets/css/edit.css">
+  <title>API Edit Page</title>
 </head>
 
 <body>
@@ -25,31 +24,42 @@
         aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
-      <div class="wishlist-page">
-        <a href="./wishlist.html" class="btn btn-info">Wishlist</a>
+      <div class="collapse navbar-collapse" id="navbarNavDropdown">
+        <ul class="navbar-nav">
+          <li class="nav-item">
+            <a class="nav-link active" aria-current="page" href="#">Home</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="#">Features</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="#">Pricing</a>
+          </li>
+          <li class="nav-item dropdown">
+            <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+              Dropdown link
+            </a>
+            <ul class="dropdown-menu">
+              <li><a class="dropdown-item" href="#">Action</a></li>
+              <li><a class="dropdown-item" href="#">Another action</a></li>
+              <li><a class="dropdown-item" href="#">Something else here</a></li>
+            </ul>
+          </li>
+        </ul>
       </div>
     </div>
   </nav>
 
-  <main class="mt-5">
+<main>
+     <div class="d-flex justify-content-center mt-5">
+      <div id="edit-form-container"></div>
+     </div>
 
-    <section id="cities">
-        <div class="container">
-            <input type="text" class="form-control w-25 mb-3" id="search" placeholder="search city by name">
-            <div class="row cities-row">
+    <div id="result-message"></div>
+  
 
-           
 
-                <!-- loader -->
-                <div class="justify-content-center cities-loader d-none">
-                    <div class="spinner-border " role="status">
-                        <span class="visually-hidden">Loading...</span>
-                    </div>
-                </div>
-            </div>
-        </div>
-        </div>
-    </section>
+    <a href="./index.html" class="btn btn-outline-dark d-flex justify-content-center m-start mt-5 w-25">HOME PAGE</a>
 </main>
 
 
@@ -62,8 +72,8 @@
   <!-- axios js cdn -->
   <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
 
-  <!-- main js script  -->
-  <script type="module" src="./assets/js/script.js"></script>
+  <!-- edit js script  -->
+  <script type="module" src="./assets/js/edit.js"></script>
 </body>
 
 </html>
