--- a/wishlist.html
+++ b/wishlist.html
@@ -4,7 +4,6 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-
   <!-- boostrap cdn -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
@@ -14,7 +13,7 @@
     crossorigin="anonymous" referrerpolicy="no-referrer" />
   <!-- style css link -->
   <link rel="stylesheet" href="./assets/css/style.css">
-  <title>API Home Page</title>
+  <title>API Wishlist Page</title>
 </head>
 
 <body>
@@ -26,31 +25,16 @@
         <span class="navbar-toggler-icon"></span>
       </button>
       <div class="wishlist-page">
-        <a href="./wishlist.html" class="btn btn-info">Wishlist</a>
+        <a href="./index.html" class="btn btn-info">HOME</a>
       </div>
     </div>
   </nav>
 
-  <main class="mt-5">
-
-    <section id="cities">
-        <div class="container">
-            <input type="text" class="form-control w-25 mb-3" id="search" placeholder="search city by name">
-            <div class="row cities-row">
-
-           
-
-                <!-- loader -->
-                <div class="justify-content-center cities-loader d-none">
-                    <div class="spinner-border " role="status">
-                        <span class="visually-hidden">Loading...</span>
-                    </div>
-                </div>
-            </div>
-        </div>
-        </div>
-    </section>
-</main>
+  <div class="container">
+    <h1 class="my-5">My Wishlist</h1>
+    <div class="wishlist-row row"></div>
+    <div class="wishlist-loader d-none">Loading...</div>
+</div>
 
 
   <!-- sweet alert js cdn -->
@@ -62,8 +46,8 @@
   <!-- axios js cdn -->
   <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
 
-  <!-- main js script  -->
-  <script type="module" src="./assets/js/script.js"></script>
+  <!-- wishlist js script  -->
+  <script type="module" src="./assets/js/wishlist.js"></script>
 </body>
 
 </html>
